--- a/.github/workflows/buildapp.yml
+++ b/.github/workflows/buildapp.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: macos-latest
     steps:
       - name: Checkout the repo
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
           path: main
 
@@ -17,7 +17,7 @@ jobs:
       - name: Build and Convert the release macOS version
         run: |
           xcrun safari-web-extension-converter main --macos-only --no-prompt --project-location /Users/runner/work/release --app-name ImprovedTube
-
+          xcodebuild -project /Users/runner/work/release/ImprovedTube/ImprovedTube.xcodeproj"
 
       - name: Upload build version as artifact
         uses: actions/upload-artifact@v3
