--- a/.github/workflows/buildapp.yml
+++ b/.github/workflows/buildapp.yml
@@ -18,9 +18,11 @@ jobs:
         run: |
           xcrun safari-web-extension-converter main --macos-only --no-prompt --project-location /Users/runner/work/release --app-name ImprovedTube
           xcodebuild -project /Users/runner/work/release/ImprovedTube/ImprovedTube.xcodeproj
+          cd /Users/runner/work/release/build/Release/
+          zip -r ImprovedTube-Safari.zip /Users/runner/work/release/build/Release/ImprovedTube.app
 
       - name: Upload build version as artifact
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
-          name: Improve YouTube-safari
-          path: /Users/runner/work/release
+          name: ImprovedTube-Safari
+          path: /Users/runner/work/release/build/Release/ImprovedTube-Safari.zip
