--- a/.github/workflows/buildapp.yml
+++ b/.github/workflows/buildapp.yml
@@ -16,7 +16,7 @@ jobs:
 
       - name: Build and Convert the release macOS version
         run: |
-          xcrun safari-web-extension-converter main --macos-only --no-open --force --swift --no-prompt --project-location /Users/runner/work/release --app-name ImprovedTube >> /Users/runner/work/release/ImprovedTube/build/Release/output.txt
+          xcrun safari-web-extension-converter main --macos-only --no-open --force --swift --no-prompt --project-location /Users/runner/work/release --app-name ImprovedTube
           xcodebuild -project /Users/runner/work/release/ImprovedTube/ImprovedTube.xcodeproj
           cd /Users/runner/work/release/ImprovedTube/build/Release/
           zip -r ImprovedTube-Safari.zip ImprovedTube.app
