--- a/.github/workflows/buildapp.yml
+++ b/.github/workflows/buildapp.yml
@@ -1,4 +1,4 @@
-name: Create build for release
+name: Create Safari build for release
 
 on:
   workflow_dispatch:
@@ -16,6 +16,7 @@ jobs:
 
       - name: Build and Convert the release macOS version
         run: |
+          xcrun safari-web-extension-converter --help
           xcrun safari-web-extension-converter main --macos-only --no-open --force --swift --no-prompt --project-location /Users/runner/work/release --app-name ImprovedTube
           xcodebuild -project /Users/runner/work/release/ImprovedTube/ImprovedTube.xcodeproj
           cd /Users/runner/work/release/ImprovedTube/build/Release/
