--- a/.github/workflows/buildapp.yml
+++ b/.github/workflows/buildapp.yml
@@ -18,7 +18,8 @@ jobs:
         run: |
           xcrun safari-web-extension-converter main --macos-only --no-open --force --swift --no-prompt --project-location /Users/runner/work/release --app-name ImprovedTube
           cd /Users/runner/work/release/ImprovedTube/
-          xcrun agvtool new-marketing-version 4.8
+          sed -i '' -e 's/MARKETING_VERSION \= [^\;]*\;/MARKETING_VERSION = 4.8;/' ImprovedTube.xcodeproj/project.pbxproj
+          xcrun agvtool new-version 4.8
           gem install xcpretty
           xcodebuild -project /Users/runner/work/release/ImprovedTube/ImprovedTube.xcodeproj | xcpretty && exit ${PIPESTATUS[0]}
           cd /Users/runner/work/release/ImprovedTube/build/Release/
