--- a/.github/workflows/buildapp.yml
+++ b/.github/workflows/buildapp.yml
@@ -31,4 +31,4 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: ImprovedTube-Safari
-          path: /Users/runner/work/release/ImprovedTube/build/Release/ImprovedTube-Safari.zip
+          path: /Users/runner/work/release/ImprovedTube/build/Release/ImprovedTube-4.8-Safari.zip
