--- a/.github/workflows/buildapp.yml
+++ b/.github/workflows/buildapp.yml
@@ -2,6 +2,12 @@ name: Create Safari build for release
 
 on:
   workflow_dispatch:
+    inputs:
+      version:
+        description: "version"
+        default: ""
+        required: true
+        type: string
 
 jobs:
   build:
@@ -18,17 +24,17 @@ jobs:
         run: |
           xcrun safari-web-extension-converter main --macos-only --no-open --force --swift --no-prompt --project-location /Users/runner/work/release --app-name ImprovedTube
           cd /Users/runner/work/release/ImprovedTube/
-          sed -i '' -e 's/MARKETING_VERSION \= [^\;]*\;/MARKETING_VERSION = 4.8;/' ImprovedTube.xcodeproj/project.pbxproj
-          xcrun agvtool new-version 4.8
+          sed -i '' -e 's/MARKETING_VERSION \= [^\;]*\;/MARKETING_VERSION = ${{ env.VERSION }};/' ImprovedTube.xcodeproj/project.pbxproj
+          xcrun agvtool new-version ${{ env.VERSION }}
           xcodebuild -project /Users/runner/work/release/ImprovedTube/ImprovedTube.xcodeproj
 
       - name: Zip File
         run: |
           cd /Users/runner/work/release/ImprovedTube/build/Release/
-          zip -r ImprovedTube-Safari.zip ImprovedTube.app
+          zip -r ImprovedTube-${{ env.VERSION }}-Safari.zip ImprovedTube.app
 
       - name: Upload build version as artifact
         uses: actions/upload-artifact@v4
         with:
           name: ImprovedTube-Safari
-          path: /Users/runner/work/release/ImprovedTube/build/Release/ImprovedTube-4.8-Safari.zip
+          path: /Users/runner/work/release/ImprovedTube/build/Release/ImprovedTube-${{ env.VERSION }}-Safari.zip
