--- a/.github/workflows/buildapp.yml
+++ b/.github/workflows/buildapp.yml
@@ -26,7 +26,7 @@ jobs:
           cd /Users/runner/work/release/ImprovedTube/
           sed -i '' -e 's/MARKETING_VERSION \= [^\;]*\;/MARKETING_VERSION = ${{ inputs.version }};/' ImprovedTube.xcodeproj/project.pbxproj
           xcrun agvtool new-version ${{ inputs.version }}
-          xcodebuild -project /Users/runner/work/release/ImprovedTube/ImprovedTube.xcodeproj
+          xcodebuild -quiet -project /Users/runner/work/release/ImprovedTube/ImprovedTube.xcodeproj
 
       - name: Zip File
         run: |
