--- a/.github/workflows/buildapp.yml
+++ b/.github/workflows/buildapp.yml
@@ -22,7 +22,7 @@ jobs:
 
       - name: Build and Convert the release macOS version
         run: |
-          xcrun safari-web-extension-converter main --macos-only --no-open --force --swift --no-prompt --project-location /Users/runner/work/release --app-name ImprovedTube
+          xcrun safari-web-extension-converter main --macos-only --no-open --force --swift --no-prompt --project-location /Users/runner/work/release --app-name ImprovedTube --bundle-identifier ImprovedTube
           cd /Users/runner/work/release/ImprovedTube/
           sed -i '' -e 's/MARKETING_VERSION \= [^\;]*\;/MARKETING_VERSION = ${{ inputs.version }};/' ImprovedTube.xcodeproj/project.pbxproj
           xcrun agvtool new-version ${{ inputs.version }}
