--- a/.github/workflows/buildapp.yml
+++ b/.github/workflows/buildapp.yml
@@ -22,7 +22,7 @@ jobs:
           path: main
 
 
-      - name: Build and Convert the release macOS version
+      - name: Build and Convert the Release macOS version
         run: |
           xcrun safari-web-extension-converter main --macos-only --no-open --force --swift --no-prompt --project-location /Users/runner/work/release --app-name ImprovedTube --bundle-identifier ImprovedTube
           cd /Users/runner/work/release/ImprovedTube/
@@ -35,15 +35,14 @@ jobs:
           cd /Users/runner/work/release/ImprovedTube/build/Release/
           zip -r ImprovedTube-${{ github.ref_name }}-Safari.zip ImprovedTube.app
 
-      - name: Upload build version as artifact
+      - name: Upload Build as Artifact
         uses: actions/upload-artifact@v4
         with:
           name: ImprovedTube-${{ github.ref_name }}-Safari
           path: /Users/runner/work/release/ImprovedTube/build/Release/ImprovedTube-${{ github.ref_name }}-Safari.zip
 
-      - name: upload to release
-        uses: xresloader/upload-to-github-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Upload build to Release
+        uses: softprops/action-gh-release@v1
+        if: ${{startsWith(github.ref, 'refs/tags/') }}
         with:
-          file: "/Users/runner/work/release/ImprovedTube/build/Release/ImprovedTube-${{ github.ref_name }}-Safari.zip"
+          files: /Users/runner/work/release/ImprovedTube/build/Release/ImprovedTube-${{ github.ref_name }}-Safari.zip
