--- a/.github/workflows/buildapp.yml
+++ b/.github/workflows/buildapp.yml
@@ -33,16 +33,16 @@ jobs:
       - name: Zip File
         run: |
           cd /Users/runner/work/release/ImprovedTube/build/Release/
-          zip -r ImprovedTube-${{ github.ref_name }}-Safari.zip ImprovedTube.app
+          zip -r ImprovedTube-v${{ github.ref_name }}-Safari.zip ImprovedTube.app
 
-      - name: Upload Build as Artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: ImprovedTube-${{ github.ref_name }}-Safari
-          path: /Users/runner/work/release/ImprovedTube/build/Release/ImprovedTube-${{ github.ref_name }}-Safari.zip
+      # - name: Upload Build as Artifact
+      #   uses: actions/upload-artifact@v4
+      #   with:
+      #     name: ImprovedTube-${{ github.ref_name }}-Safari
+      #     path: /Users/runner/work/release/ImprovedTube/build/Release/ImprovedTube-v${{ github.ref_name }}-Safari.zip
 
       - name: Upload build to Release
         uses: softprops/action-gh-release@v1
         if: ${{startsWith(github.ref, 'refs/tags/') }}
         with:
-          files: /Users/runner/work/release/ImprovedTube/build/Release/ImprovedTube-${{ github.ref_name }}-Safari.zip
+          files: /Users/runner/work/release/ImprovedTube/build/Release/ImprovedTube-v${{ github.ref_name }}-Safari.zip
